fix: update code MultisigInceptionTest